--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,22 @@
+
+<% provide(:title, @user.name) %>
+
+<% if @current_user.nil?
+@current_user = User.find_by(id: session[:user_id])
+else
+@current_user
+end%>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+    </section>
+  </aside>
+</div>
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -12,3 +31,6 @@
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+
+
+
