--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,21 +1,12 @@
-<h1>Editing User</h1>
-
-
-
+<% provide(:title, 'Edit user') %>
+<% provide(:button_text, 'Save changes') %>
+<h1>Update your profile</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
-      <%#= render 'shared/error_messages' %>
-<%= f.label :name%>
-<%= f.text_field :name, class:'form-control' %>
-
-<%= f.label :email %>
-<%= f.email_field :email, class:'form-control' %>
-
-      <%= f.submit "Update", class: "btn btn-primary" %>
-    <% end %>
+    <%= render 'form' %>
+    <div class="gravatar_edit">
+      <%= gravatar_for @user %>
+      <a href="http://gravatar.com/emails" target="_blank">Change</a>
+    </div>
   </div>
 </div>
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
