--- a/lib/assets/stylesheets/custom.scss
+++ b/lib/assets/stylesheets/custom.scss
@@ -117,7 +117,15 @@ p {
   }
 }
 
-/* footer */
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid lightgray;
+  }
+}
 
 footer {
   margin-top: 45px;
@@ -125,7 +133,7 @@ footer {
   border-top: 1px solid $gray-medium-light;
   color: #eaeaea;
   a {
-    //color: gray;
+    color: white;
     &:hover {
       //color: #eaeaea;
     }
